--- a/day456/index.html
+++ b/day456/index.html
@@ -70,9 +70,22 @@
     </section>
     <!-- SHOWCASE -->
     <section class="showcase">
+        <div class="title">
+            <p>SERVICES WE ARE OFFERING</p>
+            <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
+            <p>We are committed to providing our customers with exceptional service while offering
+                our employees the best training.</p>
+        </div>
     </section>
     <!-- BLOG -->
-    <section class="blog"></section>
+    <section class="blog">
+        <div class="title">
+            <p>SERVICES WE ARE OFFERING</p>
+            <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
+            <p>We are committed to providing our customers with exceptional service while offering
+                our employees the best training.</p>
+        </div>
+    </section>
     <!-- NUMBER -->
     <section class="number"></section>
     <!-- TRUSTED -->
