--- a/day456/index.html
+++ b/day456/index.html
@@ -68,7 +68,30 @@
         </div>
         <div class="services__content">
             <div class="services__slider">
-
+                <div class="item">
+                    <i class="fa fa-dice-d6"></i>
+                    <p>App Mobile Development</p>
+                </div>
+                <div class="item">
+                    <i class="fab fa-autoprefixer"></i>
+                    <p>App Mobile Development</p>
+                </div>
+                <div class="item">
+                    <i class="fab fa-500px"></i>
+                    <p>App Mobile Development</p>
+                </div>
+                <div class="item">
+                    <i class="fa fa-blog"></i>
+                    <p>App Mobile Development</p>
+                </div>
+                <div class="item">
+                    <i class="fab fa-battle-net"></i>
+                    <p>App Mobile Development</p>
+                </div>
+                <div class="item">
+                    <i class="fa fa-memory"></i>
+                    <p>App Mobile Development</p>
+                </div>
             </div>
         </div>
     </section>
@@ -125,6 +148,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"
         integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $('.services__slider').slick({
+            infinite: true,
+            slidesToShow: 5,
+            slidesToScroll: 1
+        });
+    </script>
 </body>
 
 </html>
