--- a/day456/index.html
+++ b/day456/index.html
@@ -50,7 +50,7 @@
         <div class="carousel__content">
             <p>WELCOME TO MEIPALY AGENCY</p>
             <h1>SMART WEB DESIGN AGENCY</h1>
-            <button>READ MORE</button>
+            <button><a href="#">READ MORE</a></button>
             <div class="carousel__arrow">
                 <i class="fa fa-angle-down"></i>
             </div>
@@ -103,6 +103,26 @@
             <p>We are committed to providing our customers with exceptional service while offering
                 our employees the best training.</p>
         </div>
+        <div class="showcase__content">
+            <div class="showcase__item">
+                <img src="./img/showcase_img_1.webp" alt="showcase_img_1">
+            </div>
+            <div class="showcase__item">
+                <img src="./img/showcase_img_2.webp" alt="showcase_img_2">
+            </div>
+            <div class="showcase__item">
+                <img src="./img/showcase_img_3.webp" alt="showcase_img_3">
+            </div>
+            <div class="showcase__item">
+                <img src="./img/showcase_img_5.webp" alt="showcase_img_5">
+            </div>
+            <div class="showcase__item">
+                <img src="./img/showcase_img_6.webp" alt="showcase_img_6">
+            </div>
+            <div class="showcase__item">
+                <img src="./img/showcase_img_7.webp" alt="showcase_img_7">
+            </div>
+        </div>
     </section>
     <!-- BLOG -->
     <section class="blog">
@@ -152,7 +172,9 @@
             slidesToShow: 5,
             slidesToScroll: 1,
             dots: true,
-            arrows: false
+            arrows: false,
+            autoplay: true,
+            autoplaySpeed: 1200
         });
     </script>
 </body>
