--- a/day456/index.html
+++ b/day456/index.html
@@ -15,6 +15,8 @@
     <!-- FONT GOOGLE -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- FANCYBOX -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <!-- SLICK CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
@@ -106,6 +108,15 @@
         <div class="showcase__content">
             <div class="showcase__item">
                 <img src="./img/showcase_img_1.webp" alt="showcase_img_1">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a href="">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_2.webp" alt="showcase_img_2">
@@ -177,6 +188,8 @@
             autoplaySpeed: 1200
         });
     </script>
+    <!-- FANCYBOX JS -->
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
