moi vua add fancybox

--- a/day456/index.html
+++ b/day456/index.html
@@ -110,7 +110,7 @@
                 <img src="./img/showcase_img_1.webp" alt="showcase_img_1">
                 <div class="showcase__overlay">
                     <div class="showcase__icon">
-                        <a href="">
+                        <a data-fancybox="gallery" href="./img/showcase_img_1.webp">
                             <i class="fa fa-search-plus"></i>
                         </a>
                         <i class="fa fa-link"></i>
@@ -120,18 +120,63 @@
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_2.webp" alt="showcase_img_2">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a data-fancybox="gallery" href="./img/showcase_img_2.webp">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_3.webp" alt="showcase_img_3">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a data-fancybox="gallery" href="./img/showcase_img_3.webp">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_5.webp" alt="showcase_img_5">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a data-fancybox="gallery" href="./img/showcase_img_5.webp">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_6.webp" alt="showcase_img_6">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a data-fancybox="gallery" href="./img/showcase_img_6.webp">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
             <div class="showcase__item">
                 <img src="./img/showcase_img_7.webp" alt="showcase_img_7">
+                <div class="showcase__overlay">
+                    <div class="showcase__icon">
+                        <a data-fancybox="gallery" href="./img/showcase_img_7.webp">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="showcase__text"></div>
+                </div>
             </div>
         </div>
     </section>
