--- a/day456/index.html
+++ b/day456/index.html
@@ -115,7 +115,10 @@
                         </a>
                         <i class="fa fa-link"></i>
                     </div>
-                    <div class="showcase__text"></div>
+                    <div class="showcase__text">
+                        <p>Logo</p>
+                        <p>Flippin Bird</p>
+                    </div>
                 </div>
             </div>
             <div class="showcase__item">
@@ -139,7 +142,9 @@
                         </a>
                         <i class="fa fa-link"></i>
                     </div>
-                    <div class="showcase__text"></div>
+                    <div class="showcase__text">
+
+                    </div>
                 </div>
             </div>
             <div class="showcase__item">
@@ -187,6 +192,38 @@
             <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
             <p>We are committed to providing our customers with exceptional service while offering
                 our employees the best training.</p>
+        </div>
+        <div class="blog__content">
+            <div class="blog__item">
+                <img src="./img/grid-metro-1.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-2.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-3.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-4.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-5.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-6.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-7.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-8.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-9.jpg" alt="">
+            </div>
+            <div class="blog__item">
+                <img src="./img/grid-metro-10.jpg" alt="">
+            </div>
         </div>
     </section>
     <!-- NUMBER -->
