--- a/day456/index.html
+++ b/day456/index.html
@@ -194,7 +194,7 @@
                 our employees the best training.</p>
         </div>
         <div class="blog__content">
-            <div class="blog__item">
+            <div class="blog__item blog__mvp">
                 <img src="./img/grid-metro-1.jpg" alt="">
             </div>
             <div class="blog__item">
@@ -221,34 +221,39 @@
             <div class="blog__item">
                 <img src="./img/grid-metro-9.jpg" alt="">
             </div>
-            <div class="blog__item">
+            <div class="blog__item blog__mvp__2">
                 <img src="./img/grid-metro-10.jpg" alt="">
             </div>
         </div>
     </section>
     <!-- NUMBER -->
     <section class="number">
-        <div class="title">
-            <p>SERVICES WE ARE OFFERING</p>
-            <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
-            <p>We are committed to providing our customers with exceptional service while offering
-                our employees the best training.</p>
+        <div class="number__content">
+            <div class="number__item">
+                <p>8705</p>
+                <p>Project Completed</p>
+            </div>
+            <div class="number__item">
+                <p>480</p>
+                <p>ACTIVE CLIENTS</p>
+            </div>
+            <div class="number__item">
+                <p>625</p>
+                <p>CUPS OF COFFEE</p>
+            </div>
+            <div class="number__item">
+                <p>9,774</p>
+                <p>HAPPY CLIENTS</p>
+            </div>
+        </div>
     </section>
     <!-- TRUSTED -->
     <section class="trusted">
-        <div class="title">
-            <p>SERVICES WE ARE OFFERING</p>
-            <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
-            <p>We are committed to providing our customers with exceptional service while offering
-                our employees the best training.</p>
+
     </section>
     <!-- EXPERIENCE -->
     <section class="experience">
-        <div class="title">
-            <p>SERVICES WE ARE OFFERING</p>
-            <h2>WE DESIGN DIGITAL PRODUCTS THAT HELP GROW BUSINESSES.</h2>
-            <p>We are committed to providing our customers with exceptional service while offering
-                our employees the best training.</p>
+
     </section>
     <!-- CONTACT -->
     <section class="contact"></section>
@@ -272,6 +277,12 @@
     </script>
     <!-- FANCYBOX JS -->
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <!-- WAYPOINT -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+        integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- COUNTUP -->
+    <script src="./cdn/js/jquery.countup.min.js"></script>
 </body>
 
 </html>
