Finish about us

--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
@@ -10,31 +10,116 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/main.css">
-
 </head>
-<header>
-    <div class="main__header">
-        <div class="logo">
-            <img src="./img/logo-2.png" alt="">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Post Layout</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-            <button>Get a quote</button>
-
-        </nav>
-    </div>
-</header>
-
 <body>
-
+    <header>
+        <div class="main__header">
+            <div class="header__left">
+                    <img src="./img/logo-2.png" alt="logo">
+            </div>
+            <div class="header__right">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Post Layout</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <button class="btn">Get a quote</button>
+            </div>  
+        </div>
+    </header>
+    <section class="carousel">
+        <div class="carousel__content">
+            <div class="cc__left">
+                <h4>We are The Best</h4>
+                <h1>Freelance Product Designer Running </h1>
+            <p>We develop the relationships that underpin the next phase in your
+    organisation’s growth.
+            </p>
+<ul>
+    <li><i class="fa fa-check"></i>Master's degree in designing</li>
+    <li><i class="fa fa-check"></i>Outstanding mobile design</li>
+</ul>
+<button class="btn">Get Started</button>
+    
+            </div>
+            <div class="cc__right">
+                <img src="./img/pic3_1.png" alt="">
+                <div class="cc__right__overlay">
+                    <img src="./img/pic1.png" alt="pic1-png">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="usp">
+        <div class="title">
+            <h4>What We Do Best</h4>
+            <h1>Our Digital Services</h1>
+        </div>
+        <div class="usp__content">
+            <div class="usp__item">
+                <div class="top__usp__item">
+                    <img src="./img/pic1_3.jpg" alt="pic1_3_jpg">
+                </div>
+                <div class="bottom__usb__item">
+                    <h4>Web Development</h4>
+                    <h6>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis magna quis.</h6>
+                </div>
+            </div>
+            <div class="usp__item">
+                <div class="top__usp__item">
+                    <img src="./img/pic2_2.jpg" alt="pic2_2_jpg">
+                </div>
+                <div class="bottom__usb__item">
+                    <h4>Strategy & Research</h4>
+                    <h6>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis magna quis.</h6>
+                </div>
+            </div>
+            <div class="usp__item">
+                <div class="top__usp__item">
+                    <img src="./img/pic3_2.jpg" alt="pic3_2_jpg">
+                </div>
+                <div class="bottom__usb__item">
+                    <h4>Growth Tracking</h4>
+                    <h6>Vestibulum a efficitur ex. Ut iaculis dapibus iaculis. Praesent lacus magna, rhoncus quis magna quis.</h6>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="aboutUS">
+        <div class="aboutUS__content">
+            <div class="ac__left">
+                <img src="./img/pic1.jpg" alt="pic1_jpg">
+            </div>
+            <div class="ac__right">
+                <div class="title">
+                    <h4>What We Do Best</h4>
+                    <h1>Build Your Business Website Better</h1>
+                </div>
+                <h6>Proin laoreet leo vel enim gravida, at porttitor metus ultricies. Cras eu velit enim. Vivamus blandit, dolor ut aliquet rutrum, ex elit mattis sapien, non molestie felis neque et nulla. Sed euismod turpis id nibh suscipit semper. Pellentesque dapibus risus arcu.</h6>
+                <ul>
+                    <li><i class="fa fa-check"></i>We support programs that create advancement opportunities for people.</li>
+                    <li><i class="fa fa-check"></i>Get a view of events and trends. Be updated on our recent news.</li>
+                    <li><i class="fa fa-check"></i>Finally, it all comes down to people. Creating a winning team.</li>
+                    <li><i class="fa fa-check"></i>Get a view of events and trends. Be updated on our recent news.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="number"></section>
+    <section class="features"></section>
+    <section class="portfolio"></section>
+    <section class="plan"></section>
+    <section class="clientComment"></section>
+    <section class="blog"></section>
 </body>
 
 </html>
