--- a/day456/index.html
+++ b/day456/index.html
@@ -289,20 +289,22 @@
             <div class="contact__map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.9064829103463!2d106.65663045083616!3d10.818468361335565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529111aa89f9d%3A0xd8f09cc0aa1b27f3!2zQ-G6o25nIGjDoG5nIGtow7RuZyBRdeG7kWMgdOG6vyBUw6JuIFPGoW4gTmjhuqV0!5e0!3m2!1svi!2s!4v1622817048856!5m2!1svi!2s"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="95%" height="450px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="contact__form">
                 <form>
                     <input type="text" placeholder="Name" id="fullName">
-                    <input type="email" name="" id="email" placeholder="email">
-                    <input type="tel" name="" id="" placeholder="Mobile">
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <input type="email" name="" id="email" placeholder="Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Ask a Question"></textarea>
                     <button type="submit">Send</button>
                 </form>
             </div>
         </div>
     </section>
     <footer></footer>
+    <a href="#" class="backToTop text-replace js-cd-top">
+        <i class="fa fa-angle-up"></i>
+    </a>
     <!-- JAVASCRIPT -->
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -334,6 +336,9 @@
             'delay': 10
         });
     </script>
+    <!-- backToTop -->
+    <script src="./cdn/js/main.js"></script>
+    <script src="./cdn/js/util.js"></script>
 </body>
 
 </html>
