--- a/day7/index.html
+++ b/day7/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-<header class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+<header class="container-xl">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <a class="navbar-brand" href="#"><i class="fa fa-dice-d20">CyberPortfolio</i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#portNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./img/finland.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="container carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
@@ -71,21 +71,218 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#portCaptions" role="button" data-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#portCaptions" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#portCaptions" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
-        </a>
+        </a> -->
       </div>
 </section>
-<section class="welcome"></section>
+<section class="welcome py-5">
+  <div class="title text-center container py-5">
+    <h1>Welcome to PortCaptions</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, nobis. Accusantium, voluptates impedit incidunt corrupti minima sequi voluptatem quaerat cum cumque praesentium illum nostrum perspiciatis voluptatum corporis natus reiciendis numquam!</p>
+  </div>
+  <div class="welcome__content container">
+    <div class="row">
+      <div class="col-12 col-md-4 col-sm-6 welcome__items mb-4">
+        <p>Design</p> 
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 col-sm-6 welcome__items mb-4">
+        <p>Marketing</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>      
+      </div>
+      <div class="col-12 col-md-4 col-sm-6 welcome__items mb-4">
+        <p>Photography</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 col-sm-6 welcome__items mb-4">
+        <p>Branding</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 col-sm-6 welcome__items mb-4">
+        <p>Development</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <div class="col-12  col-md-4 col-sm-6 welcome__items mb-4">
+        <p>SEO</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+    </div>
+      
+    </div>
+  </div>
+</section>
 <section class="feature"></section>
-<section class="project"></section>
-<section class="education"></section>
-<section class="award"></section>
+<section class="project py-5">
+  <div class="title text-center container py-5">
+    <h1>Welcome to PortCaptions</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, nobis. Accusantium, voluptates impedit incidunt corrupti minima sequi voluptatem quaerat cum cumque praesentium illum nostrum perspiciatis voluptatum corporis natus reiciendis numquam!</p>
+  </div>
+  <div class="project__content container">
+    <ul class="nav nav-pills mb-5 justify-content-center" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="all" data-toggle="pill" href="#all" role="tab" aria-controls="all" aria-selected="true">All Project</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="illustration" data-toggle="pill" href="#ill" role="tab" aria-controls="illustration" aria-selected="false">Illustration</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="photography" data-toggle="pill" href="#photo" role="tab" aria-controls="photography" aria-selected="false">Photography</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="website" data-toggle="pill" href="#web" role="tab" aria-controls="Website" aria-selected="false">Website</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all">
+        <div class="row">
+          <div class="col-xl-4 mb-5">
+            <div class="project__item">
+              <div class="card">
+                <img src="./img/g1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Apologetic robot holding flowers</h5>
+                  <p class="card-text">Branding</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 mb-5">
+            <div class="project__item">
+            <div class="card">
+              <img src="./img/g2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Apologetic robot holding flowers</h5>
+                <p class="card-text">Branding</p>
+              </div>
+            </div>
+          </div></div>
+          <div class="col-xl-4 mb-5">
+            <div class="project__item">
+            <div class="card">
+              <img src="./img/g3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Apologetic robot holding flowers</h5>
+                <p class="card-text">Branding</p>
+              </div>
+            </div>
+          </div></div>
+          <div class="col-xl-4 ">
+            <div class="project__item">
+            <div class="card">
+              <img src="./img/g4.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Apologetic robot holding flowers</h5>
+                <p class="card-text">Branding</p>
+              </div>
+            </div>
+          </div></div>
+          <div class="col-xl-4 ">
+            <div class="project__item">
+            <div class="card">
+              <img src="./img/g5.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Apologetic robot holding flowers</h5>
+                <p class="card-text">Branding</p>
+              </div>
+            </div>
+          </div></div>
+          <div class="col-xl-4 ">
+            <div class="project__item">
+            <div class="card">
+              <img src="./img/g6.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Apologetic robot holding flowers</h5>
+                <p class="card-text">Branding</p>
+              </div>
+            </div>
+          </div></div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="ill" role="tabpanel" aria-labelledby="illustration">
+        <div class="row">
+          <div class="col-xl-4">Branding</div>
+          <div class="col-xl-4">Illustration</div>
+          <div class="col-xl-4">Photoshop</div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="photo" role="tabpanel" aria-labelledby="photography">
+        <div class="row">
+          <div class="col-xl-4">Branding</div>
+          <div class="col-xl-4">Illustration</div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="Website">
+        <div class="row">
+          <div class="col-xl-4">Branding</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="education my-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-6">
+        Experience
+      </div>
+      <div class="col-xl-6">
+        Education
+      </div>
+    </div>
+  </div>
+</section>
+<section class="award py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-5">
+        <div class="award__left p-5">
+          <h2>Our Achievement</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur enim, id debitis qui ratione, dolor consequatur, molestias dolores modi amet officiis aspernatur sed repudiandae vel quis! Inventore soluta deleniti nisi.</p>
+        </div>
+      </div>
+      <div class="col-7">
+        <div class="award__right">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci itaque laboriosam veritatis accusantium labore rerum error magnam dolor ducimus dolores. Sit iste optio necessitatibus sed assumenda magnam, nisi excepturi animi?</p>
+          <div class="row">
+            <div class="col">
+              <img class="img-fluid" src="./img/award-1.png" alt="award-1">
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="./img/award-2.png" alt="award-2">
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="./img/award-3.png" alt="award-3">
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="./img/award-4.png" alt="award-4">
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="./img/award-5.png" alt="award-5">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <footer></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
