--- a/day7/index.html
+++ b/day7/index.html
@@ -153,7 +153,7 @@
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all">
         <div class="row">
-          <div class="col-xl-4 mb-5">
+          <div class="col-12 col-sm-6 col-md-4 mb-5">
             <div class="project__item">
               <div class="card">
                 <img src="./img/g1.jpg" class="card-img-top" alt="...">
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-4 mb-5">
+          <div class="col-12 col-sm-6 col-md-4 mb-5">
             <div class="project__item">
             <div class="card">
               <img src="./img/g2.jpg" class="card-img-top" alt="...">
@@ -174,7 +174,7 @@
               </div>
             </div>
           </div></div>
-          <div class="col-xl-4 mb-5">
+          <div class="col-12 col-sm-6 col-md-4 mb-5">
             <div class="project__item">
             <div class="card">
               <img src="./img/g3.jpg" class="card-img-top" alt="...">
@@ -184,7 +184,7 @@
               </div>
             </div>
           </div></div>
-          <div class="col-xl-4 ">
+          <div class="col-12 col-sm-6 col-md-4 ">
             <div class="project__item">
             <div class="card">
               <img src="./img/g4.jpg" class="card-img-top" alt="...">
@@ -194,7 +194,7 @@
               </div>
             </div>
           </div></div>
-          <div class="col-xl-4 ">
+          <div class="col-12 col-sm-6 col-md-4 ">
             <div class="project__item">
             <div class="card">
               <img src="./img/g5.jpg" class="card-img-top" alt="...">
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div></div>
-          <div class="col-xl-4 ">
+          <div class="col-12 col-sm-6 col-md-4 ">
             <div class="project__item">
             <div class="card">
               <img src="./img/g6.jpg" class="card-img-top" alt="...">
@@ -252,13 +252,13 @@
 <section class="award py-5">
   <div class="container">
     <div class="row">
-      <div class="col-5">
+      <div class="col-12 col-md-5">
         <div class="award__left p-5">
           <h2>Our Achievement</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur enim, id debitis qui ratione, dolor consequatur, molestias dolores modi amet officiis aspernatur sed repudiandae vel quis! Inventore soluta deleniti nisi.</p>
         </div>
       </div>
-      <div class="col-7">
+      <div class="col-12 col-md-7">
         <div class="award__right">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci itaque laboriosam veritatis accusantium labore rerum error magnam dolor ducimus dolores. Sit iste optio necessitatibus sed assumenda magnam, nisi excepturi animi?</p>
           <div class="row">
